tests/expectations/compiler/integers/u8/max_fail.out
Error [ETYC0372008]: The value 256 is not a valid `u8`
    --> compiler-test:4:17
     |
   4 |     let a: u8 = 256u8;
     |                 ^^^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo { }
     |         ^^^^^^^^^
